# rio-protocol

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RIO_Core_Runtime_Behavior.md  SDK_README.md  pyproject.toml  requirements.txt  setup.py  simulate.py
architecture/: 15_layer_model.md
dashboard/: __init__.py  __main__.py  app.py
demo/: demo_script.md  demo_verify.py  demo_verify_sdk.py  demo_walkthrough.md
diagrams/: pipeline.mmd  reference_architecture.mmd
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  Architecture.md  CERTIFICATION.md  CERTIFICATION_CHECKLIST.md  COMPLIANCE_BADGES.md  CONFORMANCE.md  CONFORMANCE_sdk.md  ENTERPRISE_USE_CASES.md  EXECUTION_FLOW.md  GLOSSARY.md  GOVERNANCE.md  IDENTITY_AND_APPROVALS.md  LEDGER_AND_RECEIPTS.md  POLICY_AND_RISK.md  PROTOCOL_CHANGE_TEMPLATE.md  QUICKSTART.md  QUICKSTART_gateway.md  QUICKSTART_sdk.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  SIMULATION_AND_LEARNING.md  SYSTEM_OVERVIEW.md  THREAT_MODEL_SUMMARY.md  Threat_Model.md  Trust_Model.md  VERIFICATION_OUTPUT_EXAMPLE.md  VERSIONING.md
examples/: access_grant.md  attestation_record_example.json  authorization_record_example.json  canonical_request_example.json  code_deploy.md  data_deletion.md  email_send.md  engine_manifest.json  example_intent.json  example_ledger.json  example_receipt_v2.json  example_verification_result.json  execution_record_example.json  financial_transaction.md  receipt_example.json  risk_evaluation_example.json
ledger/: README.md
manifest/: rio_system_manifest.json
reference-architecture/: 01_system_overview.mmd  02_decision_traceability_chain.mmd  03_governed_execution_loop.mmd  04_protocol_stack.mmd  05_trust_boundaries.mmd  governed_action_pattern.md
rio_sdk/: __init__.py  (+8 more)
(+258 files in other folders)
